* * Add Swashbuckle.AspNetCore package * Add services and middleware required for swagger * Endpoint setup for UI at https://<apihostname>/swagger * Add the build target that generates the static swagger.json file * add gitignore entry for the .config directory that gets added with the dotnet tool * first commit of the generated swagger.json file

--- a/Source/Zybach.API/Zybach.API.csproj
+++ b/Source/Zybach.API/Zybach.API.csproj
@@ -32,9 +32,10 @@
     <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
     <PackageReference Include="Serilog.Sinks.ApplicationInsights" Version="3.1.0" />
     <PackageReference Include="SharpDocx" Version="2.1.0.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.2.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.2.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.2.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Newtonsoft" Version="6.2.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.2.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.2.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.2.3" />
   </ItemGroup>
 
 
@@ -42,5 +43,15 @@
     <ProjectReference Include="..\Zybach.EFModels\Zybach.EFModels.csproj" />
     <ProjectReference Include="..\Zybach.Models\Zybach.Models.csproj" />
   </ItemGroup>
+
+  <!-- 
+    This PostBuild target is used to generate the static swagger.json file that is meant to be 
+    used by the web project to generate typescript models using `npm run gen-model`
+  -->
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent" Condition=" '$(Configuration)' == 'Debug' ">
+    <Exec Command="dotnet new tool-manifest --force" />
+    <Exec Command="dotnet tool install --version 6.2.3 Swashbuckle.AspNetCore.Cli" />
+    <Exec Command="dotnet swagger tofile --output swagger.json $(OutputPath)\$(AssemblyName).dll v1 " />
+  </Target>
 
 </Project>
