--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ Source/old/Zybach.Web/wwwroot/assets/config.json
 /Source/Zybach.API/appsecrets.json
 Source/Zybach.Web/.vscode/
 /Source/Zybach.Web/package-lock.json
+/Source/Zybach.API/.config
