--- a/Source/docker-compose/docker-compose.override.yml
+++ b/Source/docker-compose/docker-compose.override.yml
@@ -17,3 +17,8 @@ services:
       - LeadOrganizationLongName=${LeadOrganizationLongName}
       - LeadOrganizationHomeUrl=${LeadOrganizationHomeUrl}
       - LeadOrganizationEmail=${LeadOrganizationEmail}
+      - GET_API_BASE_URL=${GET_API_BASE_URL}
+      - GET_ROBUST_REVIEW_SCENARIO_RUN_CUSTOMER_ID=${GET_ROBUST_REVIEW_SCENARIO_RUN_CUSTOMER_ID}
+      - GET_ROBUST_REVIEW_SCENARIO_RUN_USER_ID=${GET_ROBUST_REVIEW_SCENARIO_RUN_USER_ID}
+      - GET_ROBUST_REVIEW_SCENARIO_RUN_MODEL_ID=${GET_ROBUST_REVIEW_SCENARIO_RUN_MODEL_ID}
+      - GET_ROBUST_REVIEW_SCENARIO_RUN_SCENARIO_ID=${GET_ROBUST_REVIEW_SCENARIO_RUN_SCENARIO_ID}
