Update the currently running run status  on  a semi-hourly basis and also whenever we load the list page

--- a/Source/Zybach.Web/src/assets/config.json.template
+++ b/Source/Zybach.Web/src/assets/config.json.template
@@ -17,6 +17,7 @@
     "faviconFilename": [TODO],
     "leadOrganizationLogoFilename": [TODO],
     "mapQuestApiUrl": [TODO],
+    "GETEnvironmentUrl": [TODO],
   
     "keystoneAuthConfiguration": {
       "clientId": [TODO],
