--- a/Source/Zybach.Web/package.json
+++ b/Source/Zybach.Web/package.json
@@ -38,6 +38,7 @@
     "@ckeditor/ckeditor5-upload": "^18.0.0",
     "@microsoft/applicationinsights-web": "^2.5.10",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@ng-select/ng-select": "^7.4.0",
     "@turf/boolean-within": "^6.3.0",
     "@turf/helpers": "^6.3.0",
     "@types/geojson": "^7946.0.7",
@@ -63,11 +64,9 @@
     "leaflet.icon.glyph": "^0.3.0",
     "leaflet.snogylop": "^0.4.0",
     "moment": "^2.29.1",
-    "ng-multiselect-dropdown": "^0.2.14",
     "ngx-cookie-service": "^12.0.3",
     "ngx-pagination": "^5.1.1",
     "ngx-progressbar": "^6.1.1",
-    "ngx-select-dropdown": "^2.1.0",
     "ngx-toastr": "^13.2.0",
     "popper.js": "^1.16.1-lts",
     "primeng": "^12.2.2",
