--- a/Source/docker-compose/.env.template
+++ b/Source/docker-compose/.env.template
@@ -12,4 +12,8 @@ PlatformLongName=
 LeadOrganizationLongName=
 LeadOrganizationHomeUrl=
 APPINSIGHTS_INSTRUMENTATIONKEY=
-GETBaseUrl=
+GET_API_BASE_URL=https://get-api-qa.azure-api.net/GETAzureFunctionApiQA/
+GET_ROBUST_REVIEW_SCENARIO_RUN_CUSTOMER_ID=4
+GET_ROBUST_REVIEW_SCENARIO_RUN_USER_ID=160
+GET_ROBUST_REVIEW_SCENARIO_RUN_MODEL_ID=73
+GET_ROBUST_REVIEW_SCENARIO_RUN_SCENARIO_ID=19
