--- a/Source/Zybach.Web/package.json
+++ b/Source/Zybach.Web/package.json
@@ -65,6 +65,7 @@
     "leaflet.snogylop": "^0.4.0",
     "moment": "^2.29.1",
     "ngx-cookie-service": "^12.0.3",
+    "ngx-mask": "^11.1.5",
     "ngx-pagination": "^5.1.1",
     "ngx-progressbar": "^6.1.1",
     "ngx-toastr": "^13.2.0",
