removing references to LeadOrganization; added SupportEmail and DoNotReplyEmail env variables

--- a/Source/docker-compose/.env.template
+++ b/Source/docker-compose/.env.template
@@ -7,10 +7,9 @@ SMTP_PORT=25
 SITKA_EMAIL_REDIRECT={set_to_blank_for_prod}
 WEB_URL={url for zybach-web}
 KEYSTONE_REDIRECT_URL={url for invited user to redirect to after keystone verification}
-ALLOW_TRADING={bool}
 PlatformLongName=
-LeadOrganizationLongName=
-LeadOrganizationHomeUrl=
+SupportEmail=
+DoNotReplyEmail=
 APPINSIGHTS_INSTRUMENTATIONKEY=
 GET_API_BASE_URL=https://get-api-qa.azure-api.net/GETAzureFunctionApiQA/
 GET_ROBUST_REVIEW_SCENARIO_RUN_CUSTOMER_ID=4
