--- a/Source/docker-compose/docker-compose.override.yml
+++ b/Source/docker-compose/docker-compose.override.yml
@@ -14,9 +14,8 @@ services:
       - SECRET_PATH=${SECRET_PATH}
       - KEYSTONE_REDIRECT_URL=${KEYSTONE_REDIRECT_URL}
       - PlatformLongName=${PlatformLongName}
-      - LeadOrganizationLongName=${LeadOrganizationLongName}
-      - LeadOrganizationHomeUrl=${LeadOrganizationHomeUrl}
-      - LeadOrganizationEmail=${LeadOrganizationEmail}
+      - SupportEmail=${SupportEmail}
+      - DoNotReplyEmail=${DoNotReplyEmail}
       - GET_API_BASE_URL=${GET_API_BASE_URL}
       - GET_ROBUST_REVIEW_SCENARIO_RUN_CUSTOMER_ID=${GET_ROBUST_REVIEW_SCENARIO_RUN_CUSTOMER_ID}
       - GET_ROBUST_REVIEW_SCENARIO_RUN_USER_ID=${GET_ROBUST_REVIEW_SCENARIO_RUN_USER_ID}
