adding missing environment variables

--- a/Source/docker-compose/.env.template
+++ b/Source/docker-compose/.env.template
@@ -8,10 +8,14 @@ SITKA_EMAIL_REDIRECT={set_to_blank_for_prod}
 WEB_URL={url for zybach-web}
 KEYSTONE_REDIRECT_URL={url for invited user to redirect to after keystone verification}
 PlatformLongName=
+PlatformShortName=
 SupportEmail=
 DoNotReplyEmail=
-APPINSIGHTS_INSTRUMENTATIONKEY=
-GET_API_BASE_URL=https://get-api-qa.azure-api.net/GETAzureFunctionApiQA/
+INFLUXDB_URL=
+GEOOPTIX_HOSTNAME=
+GEOOPTIX_SEARCH_HOSTNAME=
+AGHUB_API_BASE_URL=
+GET_API_BASE_URL=
 GET_ROBUST_REVIEW_SCENARIO_RUN_CUSTOMER_ID=4
 GET_ROBUST_REVIEW_SCENARIO_RUN_USER_ID=160
 GET_ROBUST_REVIEW_SCENARIO_RUN_MODEL_ID=73
