--- a/Source/Zybach.API/Zybach.API.csproj
+++ b/Source/Zybach.API/Zybach.API.csproj
@@ -40,6 +40,7 @@
 
 
   <ItemGroup>
+    <ProjectReference Include="..\SitkaCaptureService\SitkaCaptureService.csproj" />
     <ProjectReference Include="..\Zybach.EFModels\Zybach.EFModels.csproj" />
     <ProjectReference Include="..\Zybach.Models\Zybach.Models.csproj" />
   </ItemGroup>
