--- a/Source/docker-compose/docker-compose.vs.debug.yml
+++ b/Source/docker-compose/docker-compose.vs.debug.yml
@@ -18,3 +18,11 @@ services:
       - Kestrel__Certificates__Default__Password=password#1
     volumes:
       - ~/.aspnet/https:/https:ro
+
+  sitkacapture:
+    container_name: zybach_sitkacapture
+    image: sitkacontainers.azurecr.io/sitkacapture:latest
+    environment:
+      - PORT=8724
+    ports:
+      - 127.0.0.1:8724:8724
