--- a/Source/Zybach.API/Dockerfile
+++ b/Source/Zybach.API/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /src
 COPY ./Zybach.Models ./Zybach.Models
 COPY ./Zybach.EFModels ./Zybach.EFModels
 COPY ./Zybach.API ./Zybach.API
-COPY ./SitkaCaptureService ./SitkaCaptureService
+COPY ./VegaRenderService ./VegaRenderService
 
 RUN dotnet publish ./Zybach.API/Zybach.API.csproj -c Release -o /app
 
