--- a/Source/docker-compose/docker-compose.override.yml
+++ b/Source/docker-compose/docker-compose.override.yml
@@ -26,4 +26,4 @@ services:
       - GET_ROBUST_REVIEW_SCENARIO_RUN_USER_ID=${GET_ROBUST_REVIEW_SCENARIO_RUN_USER_ID}
       - GET_ROBUST_REVIEW_SCENARIO_RUN_MODEL_ID=${GET_ROBUST_REVIEW_SCENARIO_RUN_MODEL_ID}
       - GET_ROBUST_REVIEW_SCENARIO_RUN_SCENARIO_ID=${GET_ROBUST_REVIEW_SCENARIO_RUN_SCENARIO_ID}
-      - PRINT_URL=${PRINT_URL}
+      - VEGA_RENDER_URL=${VEGA_RENDER_URL}
