--- a/Source/Zybach.API/Zybach.API.csproj
+++ b/Source/Zybach.API/Zybach.API.csproj
@@ -52,7 +52,7 @@
   <Target Name="PostBuild" AfterTargets="PostBuildEvent" Condition=" '$(Configuration)' == 'Debug' ">
     <Exec Command="dotnet new tool-manifest --force" />
     <Exec Command="dotnet tool install --version 6.2.3 Swashbuckle.AspNetCore.Cli" />
-    <Exec Command="dotnet swagger tofile --output swagger.json $(OutputPath)\$(AssemblyName).dll v1 " />
+    <Exec Command="dotnet swagger tofile --output swagger.json $(OutputPath)\$(AssemblyName).dll v1 " ContinueOnError="true"/>
   </Target>
 
 </Project>
