--- a/Source/Zybach.EFModels/Zybach.EFModels.csproj
+++ b/Source/Zybach.EFModels/Zybach.EFModels.csproj
@@ -20,6 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\VegaRenderService\VegaRenderService.csproj" />
     <ProjectReference Include="..\Zybach.Models\Zybach.Models.csproj" />
   </ItemGroup>
 
