--- a/Source/Zybach.Web/angular.json
+++ b/Source/Zybach.Web/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "cc6f6acf-83d6-447c-9b9b-802ffeacb032"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   
