--- a/Source/docker-compose/.env.template
+++ b/Source/docker-compose/.env.template
@@ -20,3 +20,4 @@ GET_ROBUST_REVIEW_SCENARIO_RUN_CUSTOMER_ID=4
 GET_ROBUST_REVIEW_SCENARIO_RUN_USER_ID=160
 GET_ROBUST_REVIEW_SCENARIO_RUN_MODEL_ID=73
 GET_ROBUST_REVIEW_SCENARIO_RUN_SCENARIO_ID=19
+VEGA_RENDER_URL=
