--- a/Source/docker-compose/.env.template
+++ b/Source/docker-compose/.env.template
@@ -21,3 +21,14 @@ GET_ROBUST_REVIEW_SCENARIO_RUN_USER_ID=160
 GET_ROBUST_REVIEW_SCENARIO_RUN_MODEL_ID=73
 GET_ROBUST_REVIEW_SCENARIO_RUN_SCENARIO_ID=19
 VEGA_RENDER_URL=
+OpenETAPIBaseUrl=
+OpenETRasterTimeSeriesMultipolygonRoute=
+OpenETRasterMetadataRoute=
+OpenETAllFilesReadyForExportRoute=
+OpenETRasterExportStatusRoute=
+DefaultBoundingBoxLeft=
+DefaultBoundingBoxRight=
+DefaultBoundingBoxTop=
+DefaultBoundingBoxBottom=
+OpenETRasterTimeseriesMultipolygonColumnToUseAsIdentifier=
+AllowOpenETSync=
