--- a/Zybach.API/Dockerfile
+++ b/Zybach.API/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/sdk:5.0-focal AS build
+FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build-env
 WORKDIR /src
 
 COPY ./Zybach.Models ./Zybach.Models
@@ -8,9 +8,8 @@ COPY ./VegaRenderService ./VegaRenderService
 
 RUN dotnet publish ./Zybach.API/Zybach.API.csproj -c Release -o /app
 
-FROM mcr.microsoft.com/dotnet/aspnet:5.0-focal AS final
+FROM mcr.microsoft.com/dotnet/aspnet:6.0
 WORKDIR /app
-COPY --from=build /app /app
-RUN ls -la
+COPY --from=build-env /app /app
 EXPOSE 80
 ENTRYPOINT ["dotnet", "Zybach.API.dll"]
