--- a/docker-compose/docker-compose.override.yml
+++ b/docker-compose/docker-compose.override.yml
@@ -20,6 +20,7 @@ services:
       - GEOOPTIX_HOSTNAME=${GEOOPTIX_HOSTNAME}
       - GEOOPTIX_SEARCH_HOSTNAME=${GEOOPTIX_SEARCH_HOSTNAME}
       - AGHUB_API_BASE_URL=${AGHUB_API_BASE_URL}
+      - AGHUB_API_BUCKET=${AGHUB_API_BUCKET}
       - GET_API_BASE_URL=${GET_API_BASE_URL}
       - GET_ROBUST_REVIEW_SCENARIO_RUN_CUSTOMER_ID=${GET_ROBUST_REVIEW_SCENARIO_RUN_CUSTOMER_ID}
       - GET_ROBUST_REVIEW_SCENARIO_RUN_USER_ID=${GET_ROBUST_REVIEW_SCENARIO_RUN_USER_ID}
