Creating WellGroup and WellGroupWell tables. Adding a few additional fields to the WellMinimalDto, and a get route to the WellController.

--- a/Zybach.EFModels/Zybach.EFModels.csproj
+++ b/Zybach.EFModels/Zybach.EFModels.csproj
@@ -24,4 +24,8 @@
     <ProjectReference Include="..\Zybach.Models\Zybach.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Entities\ExtensionMethods\" />
+  </ItemGroup>
+
 </Project>
