--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 
 services:
   zybach.api:
-    image: sitkacontainers.azurecr.io/zybach/api
+    image: zybach/api
     build:
       context: ..
       dockerfile: Zybach.API/Dockerfile
