GUILD-97 Migrate Containerized apps to new Registry * add esacontainers back to local debug docker-compose

--- a/docker-compose/docker-compose.vs.debug.yml
+++ b/docker-compose/docker-compose.vs.debug.yml
@@ -21,7 +21,7 @@ services:
 
   vegarenderservice:
     container_name: zybach_vegarenderservice
-    image: vegarenderservice:latest
+    image: esacontainers.azurecr.io/vegarenderservice:latest
     environment:
       - PORT=8090
     ports:
