--- a/Zybach.Web/package.json
+++ b/Zybach.Web/package.json
@@ -71,10 +71,12 @@
     "ngx-toastr": "^13.2.0",
     "popper.js": "^1.16.1-lts",
     "primeng": "^12.2.2",
+    "process": "^0.11.10",
     "rxjs": "^6.5.5",
     "set-value": ">=4.0.1",
     "style-loader": "^1.2.1",
     "tslib": "^2.3.1",
+    "util": "^0.12.5",
     "vega": "^5.24.0",
     "vega-embed": "^6.21.3",
     "vega-lite": "^5.6.1",
