--- a/Zybach.Web/package.json
+++ b/Zybach.Web/package.json
@@ -22,20 +22,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.2.13",
+    "@angular/animations": "^13.4.0",
     "@angular/cdk": "^12.2.12",
-    "@angular/common": "^12.2.13",
-    "@angular/compiler": "^12.2.13",
-    "@angular/core": "^12.2.13",
-    "@angular/elements": "^12.2.13",
-    "@angular/forms": "^12.2.13",
-    "@angular/localize": "^12.2.13",
-    "@angular/platform-browser": "^12.2.13",
-    "@angular/platform-browser-dynamic": "^12.2.13",
-    "@angular/platform-server": "^12.2.13",
-    "@angular/router": "^12.2.13",
-    "@ckeditor/ckeditor5-angular": "^1.2.3",
-    "@ckeditor/ckeditor5-upload": "^18.0.0",
+    "@angular/common": "^13.4.0",
+    "@angular/compiler": "^13.4.0",
+    "@angular/core": "^13.4.0",
+    "@angular/elements": "^13.4.0",
+    "@angular/forms": "^13.4.0",
+    "@angular/localize": "^13.4.0",
+    "@angular/platform-browser": "^13.4.0",
+    "@angular/platform-browser-dynamic": "^13.4.0",
+    "@angular/platform-server": "^13.4.0",
+    "@angular/router": "^13.4.0",
     "@microsoft/applicationinsights-web": "^2.5.10",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@ng-select/ng-select": "^7.4.0",
@@ -45,6 +43,7 @@
     "@types/json2csv": "^5.0.1",
     "@types/leaflet": "^1.5.21",
     "@types/leaflet.icon.glyph": "^0.2.0",
+    "@tinymce/tinymce-angular": "^6.0.0",
     "ag-grid-angular": "^26.1.0",
     "ag-grid-community": "^26.1.0",
     "angular-mydatepicker": "^0.11.5",
@@ -76,6 +75,7 @@
     "rxjs": "^6.5.5",
     "set-value": ">=4.0.1",
     "style-loader": "^1.2.1",
+    "tinymce": "^6.4.2",
     "tslib": "^2.3.1",
     "util": "^0.12.5",
     "vega": "^5.24.0",
@@ -85,11 +85,11 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.13",
+    "@angular-devkit/build-angular": "~13.3.11",
     "@angular-eslint/eslint-plugin": "^12.6.1",
-    "@angular/cli": "^12.2.13",
-    "@angular/compiler-cli": "^12.2.13",
-    "@angular/language-service": "^12.2.13",
+    "@angular/cli": "^13.3.11",
+    "@angular/compiler-cli": "^13.4.0",
+    "@angular/language-service": "^13.4.0",
     "@babel/compat-data": "~7.9.0",
     "@fortawesome/fontawesome-free": "^5.15.2",
     "@openapitools/openapi-generator-cli": "^2.4.13",
@@ -106,6 +106,6 @@
     "npm": "^8.1.3",
     "protractor": "~7.0.0",
     "ts-node": "~8.9.1",
-    "typescript": "4.3.5"
+    "typescript": "4.6.4"
   }
 }
