--- a/Zybach.API/Dockerfile
+++ b/Zybach.API/Dockerfile
@@ -1,15 +1,26 @@
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build-env
-WORKDIR /src
+#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-COPY ./Zybach.Models ./Zybach.Models
-COPY ./Zybach.EFModels ./Zybach.EFModels
-COPY ./Zybach.API ./Zybach.API
-COPY ./VegaRenderService ./VegaRenderService
-
-RUN dotnet publish ./Zybach.API/Zybach.API.csproj -c Release -o /app
-
-FROM mcr.microsoft.com/dotnet/aspnet:6.0
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+USER app
 WORKDIR /app
-COPY --from=build-env /app /app
-EXPOSE 80
+EXPOSE 8080
+EXPOSE 8081
+
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+ARG BUILD_CONFIGURATION=Release
+WORKDIR /src
+COPY ["Zybach.API/Zybach.API.csproj" , "Zybach.API/"]
+
+RUN dotnet restore "./Zybach.API/./Zybach.API.csproj"
+COPY . .
+WORKDIR "/src/Zybach.API"
+RUN dotnet build "./Zybach.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
+
+FROM build AS publish
+ARG BUILD_CONFIGURATION=Release
+RUN dotnet publish "./Zybach.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+
+FROM base AS final
+WORKDIR /app
+COPY --from=publish /app/publish .
 ENTRYPOINT ["dotnet", "Zybach.API.dll"]
