--- a/Zybach.Web/angular.json
+++ b/Zybach.Web/angular.json
@@ -1,8 +1,5 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "cli": {
-    "analytics": "cc6f6acf-83d6-447c-9b9b-802ffeacb032"
-  },
   "version": 1,
   "newProjectRoot": "projects",
   
@@ -11,7 +8,7 @@
       "root": "",
       "sourceRoot": "src",
       "projectType": "application",
-      "prefix": "zybach",
+      "prefix": "",
       "schematics": {
         "@schematics/angular:component": {
           "style": "scss"
@@ -157,5 +154,7 @@
       }
     }
   },
-  "defaultProject": "Zybach.Web"
+  "cli": {
+    "analytics": false
+  }
 }
