--- a/docker-compose/docker-compose.override.yml
+++ b/docker-compose/docker-compose.override.yml
@@ -5,7 +5,11 @@ services:
     build:
       dockerfile: Zybach.API/Dockerfile
     environment:
-      - ASPNETCORE_ENVIRONMENT=${ASPNETCORE_ENVIRONMENT}
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORTS=8080
+      - ASPNETCORE_HTTPS_PORTS=8081
+      - Kestrel__Certificates__Default__Path=/https/host.docker.internal.pfx
+      - Kestrel__Certificates__Default__Password=password#1
       - KEYSTONE_HOST=${KEYSTONE_HOST}
       - SMTP_HOST=${SMTP_HOST}
       - SMTP_PORT=${SMTP_PORT}
@@ -39,4 +43,17 @@ services:
       - DefaultBoundingBoxTop=${DefaultBoundingBoxTop}
       - DefaultBoundingBoxBottom=${DefaultBoundingBoxBottom}
       - OpenETRasterTimeseriesMultipolygonColumnToUseAsIdentifier=${OpenETRasterTimeseriesMultipolygonColumnToUseAsIdentifier}
-      - AllowOpenETSync=${AllowOpenETSync}
+      - AllowOpenETSync=${AllowOpenETSync}    
+    ports:
+      - "8711:8080"
+      - "8712:8081"
+    volumes:
+      - ~/.aspnet/https:/https:ro
+
+  vegarenderservice:
+    container_name: zybach_vegarenderservice
+    image: esacontainers.azurecr.io/vegarenderservice:latest
+    environment:
+      - PORT=8090
+    ports:
+      - 127.0.0.1:8090:8090
