--- a/Zybach.Web/package.json
+++ b/Zybach.Web/package.json
@@ -39,8 +39,9 @@
     "@angular/platform-server": "^16.2.12",
     "@angular/router": "^16.2.12",
     "@microsoft/applicationinsights-web": "^2.5.10",
-    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
-    "@ng-select/ng-select": "^7.4.0",
+    "@ng-bootstrap/ng-bootstrap": "^15.0.0",
+    "@ng-select/ng-select": "^11.0.0",
+    "@popperjs/core": "^2.11.8",
     "@tinymce/tinymce-angular": "^6.0.0",
     "@turf/boolean-within": "^6.3.0",
     "@turf/helpers": "^6.3.0",
@@ -48,11 +49,10 @@
     "@types/json2csv": "^5.0.1",
     "@types/leaflet": "^1.5.21",
     "@types/leaflet.icon.glyph": "^0.2.0",
-    "ag-grid-angular": "^26.1.0",
-    "ag-grid-community": "^26.1.0",
-    "angular-mydatepicker": "^0.11.5",
-    "angular-oauth2-oidc": "^12.1.0",
-    "angular-oauth2-oidc-jwks": "^12.0.0",
+    "ag-grid-angular": "^30.0.0",
+    "ag-grid-community": "^30.0.0",
+    "angular-oauth2-oidc": "^15.0.1",
+    "angular-oauth2-oidc-jwks": "^15.0.1",
     "bootstrap": "^4.4.1",
     "color-scheme": "^1.0.1",
     "core-js": "^3.6.5",
@@ -67,12 +67,12 @@
     "leaflet.icon.glyph": "^0.3.0",
     "leaflet.snogylop": "^0.4.0",
     "moment": "^2.29.1",
-    "ngx-cookie-service": "^12.0.3",
-    "ngx-mask": "^11.1.5",
+    "ngx-cookie-service": "^16.0.0",
+    "ngx-mask": "^16.4.2",
     "ngx-pagination": "^5.1.1",
     "ngx-progressbar": "^6.1.1",
-    "ngx-timeago": "^2.0.0",
-    "ngx-toastr": "^13.2.0",
+    "ngx-timeago": "^3.0.0",
+    "ngx-toastr": "^17.0.2",
     "popper.js": "^1.16.1-lts",
     "primeng": "^12.2.2",
     "process": "^0.11.10",
@@ -94,21 +94,21 @@
     "@angular/cli": "^16.2.10",
     "@angular/compiler-cli": "^16.2.12",
     "@angular/language-service": "^16.2.12",
-    "@babel/compat-data": "~7.23.5",
-    "@fortawesome/fontawesome-free": "^5.15.2",
-    "@openapitools/openapi-generator-cli": "^2.4.13",
-    "@types/node": "^17.0.29",
-    "@typescript-eslint/eslint-plugin": "^5.3.1",
-    "@typescript-eslint/eslint-plugin-tslint": "^5.3.1",
-    "@typescript-eslint/parser": "^5.3.1",
+    "@babel/compat-data": "~7.9.0",
+    "@fortawesome/fontawesome-free": "^5.13.0",
+    "@openapitools/openapi-generator-cli": "^2.4.26",
+    "@types/node": "^13.13.50",
+    "@typescript-eslint/eslint-plugin": "^5.3.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^5.3.0",
+    "@typescript-eslint/parser": "^5.3.0",
     "eslint": "^8.2.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-jsdoc": "^37.0.3",
     "eslint-plugin-prefer-arrow": "^1.2.3",
     "install": "^0.13.0",
-    "npm": "^8.1.3",
-    "protractor": "~7.0.0",
+    "npm": "^10.2.5",
+    "protractor": "^7.0.0",
     "ts-node": "~8.9.1",
     "typescript": "4.9.5"
   }
