--- a/charts/zybach/charts/zybach-api/templates/configmap-prod.yaml
+++ b/charts/zybach/charts/zybach-api/templates/configmap-prod.yaml
@@ -9,33 +9,28 @@ data:
   ASPNETCORE_ENVIRONMENT: "Production"
   SITKA_EMAIL_REDIRECT: ""
   WEB_URL: "https://{{ .Values.global.domains.web }}"
-  
-
-  KEYSTONE_HOST: ""
-  KEYSTONE_REDIRECT_URL: ""
-  VEGA_RENDER_URL: ""
-  AllowOpenETSync: true
-  AppAlertsEmail: "notifications-qa@sitkatech.com"  
-  KEYSTONE_HOST: ""
-  KEYSTONE_REDIRECT_URL: ""
-  VEGA_RENDER_URL: ""
-  AllowOpenETSync: true
-  AppAlertsEmail: "notifications-qa@sitkatech.com"  
-  SupportEmail: support@sitkatech.com
+  KEYSTONE_HOST: "https://identity.sitkatech.com"
+  KEYSTONE_REDIRECT_URL: "https://{{ .Values.global.domains.web }}/create-user-callback"
+  DoNotReplyEmail: "donotreply@sitkatech.net"
+  AppAlertsEmail: "appalerts-h2o@sitkatech.com"
+  SupportEmail: "support@sitkatech.com"
   INFLUXDB_URL: "https://us-west-2-1.aws.cloud2.influxdata.com"
   GEOOPTIX_HOSTNAME: "https://tpnrd.api.geooptix.com"
   GEOOPTIX_SEARCH_HOSTNAME: "https://tpnrd.search.geooptix.com"
-  AGHUB_API_BASE_URL: "https://64x7c7fw24.execute-api.us-east-2.amazonaws.com"
-  AGHUB_API_BUCKET: "stage"
-  GET_API_BASE_URL: "https://get-api-qa.azure-api.net/GETAzureFunctionApiQA/"
+  AGHUB_API_BASE_URL: "https://0l5cc71ri2.execute-api.us-east-2.amazonaws.com"
+  AGHUB_API_BUCKET: "prod"
+  GET_API_BASE_URL: "https://get-api.azure-api.net/GETAzureFunctionApi/"
   GET_ROBUST_REVIEW_SCENARIO_RUN_CUSTOMER_ID: 4
   GET_ROBUST_REVIEW_SCENARIO_RUN_USER_ID: 160
   GET_ROBUST_REVIEW_SCENARIO_RUN_MODEL_ID: 73
   GET_ROBUST_REVIEW_SCENARIO_RUN_SCENARIO_ID: 19
+  VEGA_RENDER_URL: "http://{{ .Values.global.domains.vegarenderservice }}"
+  OPENET_SHAPEFILE_PATH: "users/esa-sitka/TPNRD_Irrigation_Units_2022-05-11"
   OpenETAPIBaseUrl: "https://openet-api.org"
   OpenETRasterTimeSeriesMultipolygonRoute: "raster/timeseries/multipolygon"
   OpenETRasterMetadataRoute: "raster/metadata"
   OpenETAllFilesReadyForExportRoute: "raster/export/all_files"
   OpenETRasterExportStatusRoute: "raster/export/status"
   OpenETRasterTimeseriesMultipolygonColumnToUseAsIdentifier: "tpid"
+  AllowOpenETSync: true
 {{ end }}  
