--- a/charts/zybach/charts/zybach-web/templates/configmap-prod.yaml
+++ b/charts/zybach/charts/zybach-web/templates/configmap-prod.yaml
@@ -5,10 +5,25 @@ metadata:
   name: {{ include "web.fullname" . }}-prod-configmap
 data:
   ASPNETCORE_ENVIRONMENT: "Production"
-  ASPNETCORE_ENVIRONMENT: "Staging"
-  CreateAccountUrl: "https://host.docker.internal:7112/Account/Register?ClientID=Zybach&RedirectUrl=",
-  CreateAccountRedirectUrl: "http://host.docker.internal:8713/create-user-callback",
-  AllowOpenETSyncs: true
-  GeoOptixWebUrl: "https://tpnrd.geooptix.com",
-  MapQuestApiUrl: "https://open.mapquestapi.com/nominatim/v1/search.php?key=gAtuAvFkArwZH61P1UVcRXseleJWEB7r",
+  production: "true"
+  staging: "false"
+  dev: "false"
+  mainAppApiUrl: "https://{{ .Values.global.domains.api }}"
+  createAccountRedirectUrl: "https://{{ .Values.global.domains.web }}/create-user-callback"
+  keystoneSupportBaseUrl: "https://identity.sitkatech.com/Authentication"
+  geoserverMapServiceUrl: "https://{{ .Values.global.domains.geoserver }}/geoserver/Splash"
+  keystone_clientId: "Zybach"
+  keystone_issuer: "https://identity.sitkatech.com"
+  keystone_redirectUriRelative: "/signin-oidc"
+  keystone_scope: "openid profile offline_access keystone"
+  keystone_sessionCheckEnabled: "false"
+  keystone_logoutUrl: "https://identity.sitkatech.com/account/logout"
+  keystone_postLogoutRedirectUri: "/"
+  keystone_waitForTokenInMsec: "500"
+  keystone_responseType: "code"
+  keystone_disablePKCE: "false"
+  AllowOpenETSync: true
+  GeooptixWebUrl: "https://tpnrd.geooptix.com"
+  MapQuestApiUrl: "https://open.mapquestapi.com/nominatim/v1/search.php?key=gAtuAvFkArwZH61P1UVcRXseleJWEB7r"
+  GETEnvironmentUrl: "https://get.azurewebsites.net"
 {{ end }}  
