--- a/charts/zybach/charts/zybach-swagger/templates/zybach-swagger-secrets.yaml
+++ b/charts/zybach/charts/zybach-swagger/templates/zybach-swagger-secrets.yaml
@@ -7,5 +7,8 @@ stringData:
   zybachSwaggerSecrets: |
     {
       "DB_CONNECTION_STRING": "Data Source={{ .Values.global.env.dbServer }};Initial Catalog={{ .Values.global.env.databaseName }};Persist Security Info=True;User ID={{ .Values.global.env.sqlUsername }};Password={{ .Values.global.secrets.apiSqlPassword }}",
-      "ZybachApiKey": "{{ .Values.global.secrets.zybachApiKey }}"
+      "ZybachApiKey": "{{ .Values.global.secrets.apiKeyValue }}"
+      "INFLUXDB_TOKEN": "{{ .Values.global.secrets.influxDBToken }}",
+      "INFLUXDB_ORG": "{{ .Values.global.secrets.influxDBOrg }}",
+      "INFLUX_BUCKET": "{{ .Values.global.secrets.influxBucket }}",
     }
