--- a/docker-compose/docker-compose.override.yml
+++ b/docker-compose/docker-compose.override.yml
@@ -24,6 +24,8 @@ services:
       - AppAlertsEmail=${AppAlertsEmail}
       - SupportEmail=${SupportEmail}
       - INFLUXDB_URL=${INFLUXDB_URL}
+      - INFLUXDB_ORG=${INFLUXDB_ORG}
+      - INFLUX_BUCKET=${INFLUX_BUCKET}
       - GEOOPTIX_HOSTNAME=${GEOOPTIX_HOSTNAME}
       - GEOOPTIX_SEARCH_HOSTNAME=${GEOOPTIX_SEARCH_HOSTNAME}
       - AGHUB_API_BASE_URL=${AGHUB_API_BASE_URL}
@@ -64,6 +66,8 @@ services:
       - APPINSIGHTS_INSTRUMENTATIONKEY=${APPINSIGHTS_INSTRUMENTATIONKEY}
       - SECRET_PATH=${SWAGGER_SECRET_PATH}
       - INFLUXDB_URL=${INFLUXDB_URL}
+      - INFLUXDB_ORG=${INFLUXDB_ORG}
+      - INFLUX_BUCKET=${INFLUX_BUCKET}
     volumes:
       - ~/.aspnet/https:/https:ro
 
