--- a/charts/zybach/charts/zybach-api/templates/configmap-prod.yaml
+++ b/charts/zybach/charts/zybach-api/templates/configmap-prod.yaml
@@ -22,10 +22,10 @@ data:
   AGHUB_API_BASE_URL: "https://0l5cc71ri2.execute-api.us-east-2.amazonaws.com"
   AGHUB_API_BUCKET: "prod"
   GET_API_BASE_URL: "https://get-api.azure-api.net/GETAzureFunctionApi/"
-  GET_ROBUST_REVIEW_SCENARIO_RUN_CUSTOMER_ID: 4
-  GET_ROBUST_REVIEW_SCENARIO_RUN_USER_ID: 160
-  GET_ROBUST_REVIEW_SCENARIO_RUN_MODEL_ID: 73
-  GET_ROBUST_REVIEW_SCENARIO_RUN_SCENARIO_ID: 19
+  GET_ROBUST_REVIEW_SCENARIO_RUN_CUSTOMER_ID: "4"
+  GET_ROBUST_REVIEW_SCENARIO_RUN_USER_ID: "160"
+  GET_ROBUST_REVIEW_SCENARIO_RUN_MODEL_ID: "73"
+  GET_ROBUST_REVIEW_SCENARIO_RUN_SCENARIO_ID: "19"
   VEGA_RENDER_URL: "http://{{ .Values.global.domains.vegarenderservice }}"
   OPENET_SHAPEFILE_PATH: "users/esa-sitka/TPNRD_Irrigation_Units_2022-05-11"
   OpenETAPIBaseUrl: "https://openet-api.org"
@@ -33,5 +33,5 @@ data:
   OpenETRasterMetadataRoute: "raster/metadata"
   OpenETRasterExportStatusRoute: "raster/export/status"
   OpenETRasterTimeseriesMultipolygonColumnToUseAsIdentifier: "tpid"
-  AllowOpenETSync: true
+  AllowOpenETSync: "true"
 {{ end }}  
