--- a/charts/zybach/charts/zybach-web/templates/deployment.yaml
+++ b/charts/zybach/charts/zybach-web/templates/deployment.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     {{- include "web.labels" . | nindent 4 }}
 spec:
+  revisionHistoryLimit: 1 # Default to 10 if not specified
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
@@ -19,12 +20,8 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        {{- include "web.selectorLabels" . | nindent 8 }} 
+        {{- include "web.selectorLabels" . | nindent 8 }}
     spec:
-      # volumes:
-      # - name: secrets
-      #   secret:
-      #     secretName: zybach-web-secrets
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
@@ -40,7 +37,7 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: 80
+              containerPort: 8080
               protocol: TCP
           # this startup probe checks the app every 10 seconds to see if it's ready to receive traffic
           # it gives a very generous 5 minutes for the container to startup. As soon as it is successful
@@ -49,20 +46,22 @@ spec:
             httpGet:
               path: /
               scheme: HTTP
-              port: 80
+              port: 8080
             failureThreshold: 30
             periodSeconds: 10
           livenessProbe:
             httpGet:
               path: /
-              port: http
+              scheme: HTTP
+              port: 8080
             periodSeconds: 4
             timeoutSeconds: 5
             failureThreshold: 3
           readinessProbe:
             httpGet:
               path: /
-              port: http
+              scheme: HTTP
+              port: 8080
           lifecycle:
             preStop:
               exec:
