--- a/charts/zybach/charts/zybach-api/templates/zybach-api-secrets.yaml
+++ b/charts/zybach/charts/zybach-api/templates/zybach-api-secrets.yaml
@@ -10,10 +10,10 @@ stringData:
       "HangfireUserName": "HangfireAdmin",
       "HangfirePassword": "{{ .Values.global.secrets.hangfirePassword }}",
       "SendGridApiKey": "{{ .Values.global.secrets.sendGridApiKey }}",
-      "APPINSIGHTS_INSTRUMENTATIONKEY": "{{ .Values.global.env.appInsightsInstrumentationKey }}" 
+      "APPINSIGHTS_INSTRUMENTATIONKEY": "{{ .Values.global.env.appInsightsInstrumentationKey }}",
       "AGHUB_API_KEY": "{{ .Values.global.secrets.agHubApiKey }}",
       "GEOOPTIX_API_KEY": "{{ .Values.global.secrets.geoOptixApiKey }}",
       "GET_API_SUBSCRIPTION_KEY": "{{ .Values.global.secrets.getApiSubscriptionKey }}",
       "INFLUXDB_TOKEN": "{{ .Values.global.secrets.influxDBToken }}",
-      "OPENET_API_KEY": "{{ .Values.global.secrets.openETApiKey }}",
+      "OPENET_API_KEY": "{{ .Values.global.secrets.openETApiKey }}"
     }
