--- a/charts/zybach/charts/zybach-api/templates/deployment.yaml
+++ b/charts/zybach/charts/zybach-api/templates/deployment.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     {{- include "api.labels" . | nindent 4 }}
 spec:
+  revisionHistoryLimit: 1 # Default to 10 if not specified
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
@@ -46,7 +47,7 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: 80
+              containerPort: 8080
               protocol: TCP
           # this startup probe checks the app every 10 seconds to see if it's ready to receive traffic
           # it gives a very generous 5 minutes for the container to startup. As soon as it is successful
@@ -55,14 +56,14 @@ spec:
             httpGet:
               path: /
               scheme: HTTP
-              port: 80
+              port: 8080
             failureThreshold: 30
             periodSeconds: 10
           livenessProbe:
             httpGet:
               path: /
               scheme: HTTP
-              port: 80
+              port: 8080
             periodSeconds: 4
             timeoutSeconds: 5
             failureThreshold: 3
@@ -70,7 +71,7 @@ spec:
             httpGet:
               path: /healthz
               scheme: HTTP
-              port: 80
+              port: 8080
           lifecycle:
             preStop:
               exec:
