update bootstrap to 5.2.0 and remove old popper.js

--- a/Zybach.Web/angular.json
+++ b/Zybach.Web/angular.json
@@ -36,7 +36,7 @@
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.slim.min.js",
-              "node_modules/popper.js/dist/umd/popper.min.js",
+              "node_modules/@popperjs/core/dist/umd/popper.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
               "node_modules/iso8601-js-period/iso8601.js"
             ],
