--- a/charts/zybach/charts/zybach-web/templates/configmap-prod.yaml
+++ b/charts/zybach/charts/zybach-web/templates/configmap-prod.yaml
@@ -11,7 +11,7 @@ data:
   mainAppApiUrl: "https://{{ .Values.global.domains.api }}"
   createAccountRedirectUrl: "https://{{ .Values.global.domains.web }}/create-user-callback"
   keystoneSupportBaseUrl: "https://identity.sitkatech.com/Authentication"
-  geoserverMapServiceUrl: "https://{{ .Values.global.domains.geoserver }}/geoserver/Splash"
+  geoserverMapServiceUrl: "https://{{ .Values.global.domains.geoserver }}/geoserver/Zybach"
   keystone_clientId: "Zybach"
   keystone_issuer: "https://identity.sitkatech.com"
   keystone_redirectUriRelative: "/signin-oidc"
