--- a/charts/zybach/charts/zybach-api/templates/deployment.yaml
+++ b/charts/zybach/charts/zybach-api/templates/deployment.yaml
@@ -43,11 +43,11 @@ spec:
         - name: {{ .Chart.Name }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
-          image: "{{ .Values.image.repository }}:{{ .Values.global.env.name }}"
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: 8080
+              containerPort: 80
               protocol: TCP
           # this startup probe checks the app every 10 seconds to see if it's ready to receive traffic
           # it gives a very generous 5 minutes for the container to startup. As soon as it is successful
@@ -56,14 +56,14 @@ spec:
             httpGet:
               path: /
               scheme: HTTP
-              port: 8080
+              port: 80
             failureThreshold: 30
             periodSeconds: 10
           livenessProbe:
             httpGet:
               path: /
               scheme: HTTP
-              port: 8080
+              port: 80
             periodSeconds: 4
             timeoutSeconds: 5
             failureThreshold: 3
@@ -71,7 +71,7 @@ spec:
             httpGet:
               path: /healthz
               scheme: HTTP
-              port: 8080
+              port: 80
           lifecycle:
             preStop:
               exec:
