Updating SystemInfoController in API and Swagger projects

--- a/docker-compose/.env.template
+++ b/docker-compose/.env.template
@@ -31,3 +31,4 @@ DefaultBoundingBoxTop=
 DefaultBoundingBoxBottom=
 OpenETRasterTimeseriesMultipolygonColumnToUseAsIdentifier=
 AllowOpenETSync=
+HOSTNAME=
