--- a/Zybach.Web/Dockerfile
+++ b/Zybach.Web/Dockerfile
@@ -6,16 +6,18 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 
-ENV NODE_VERSION 18.10.0
-ENV NODE_DOWNLOAD_SHA f468b86031cca41ee9aa7a911e70eb624413153c7432754cbe9206c7ef3de090
-
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
-RUN curl -SL "https://nodejs.org/dist/v${NODE_VERSION}/node-v${NODE_VERSION}-linux-x64.tar.gz" --output nodejs.tar.gz \
-    && echo "$NODE_DOWNLOAD_SHA nodejs.tar.gz" | sha256sum -c - \
+COPY Zybach.Web/.nvmrc                        ./Zybach.Web/.nvmrc
+RUN NODE_VERSION=$(cat Zybach.Web/.nvmrc) \
+    && echo "Installing Node Version: ${NODE_VERSION}" \
+    && curl -SL "https://nodejs.org/dist/${NODE_VERSION}/node-${NODE_VERSION}-linux-x64.tar.gz" --output nodejs.tar.gz \
+    && curl -SL "https://nodejs.org/dist/${NODE_VERSION}/SHASUMS256.txt" --output SHASUMS256.txt \
+    && grep "linux-x64.tar.gz" SHASUMS256.txt > sha-sum.txt \
+    && NODE_DOWNLOAD_SHA=$(awk '{print $1}' sha-sum.txt) \
+    && echo "${NODE_DOWNLOAD_SHA} nodejs.tar.gz" | sha256sum -c - \
     && tar -xzf "nodejs.tar.gz" -C /usr/local --strip-components=1 \
-    && rm nodejs.tar.gz \
+    && rm nodejs.tar.gz SHASUMS256.txt sha-sum.txt \
     && ln -s /usr/local/bin/node /usr/local/bin/nodejs
-
     
 COPY Zybach.Web/                        ./Zybach.Web
 
@@ -27,7 +29,7 @@ WORKDIR /src/Zybach.Web/
 RUN npm cache clean --force
 RUN npm uninstall   -g angular-cli
 RUN npm install     -g @angular/cli@16.2.8
-RUN npm install
+RUN npm ci
 
 ARG env
 RUN npm run build-${env}
