ZYB-338 Migrate Zybach QA to New Infrastructure * update pdbs

--- a/charts/zybach/charts/zybach-web/templates/pdb.yaml
+++ b/charts/zybach/charts/zybach-web/templates/pdb.yaml
@@ -1,9 +1,9 @@
 apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
-  name: {{ include "swagger.fullname" . }}-pdb
+  name: {{ include "web.fullname" . }}-pdb
 spec:
   maxUnavailable: 0
   selector:
     matchLabels:
-      app: {{ include "swagger.fullname" . }}
+      app: {{ include "web.fullname" . }}
