--- a/charts/zybach/charts/zybach-vegarenderservice/templates/pdb.yaml
+++ b/charts/zybach/charts/zybach-vegarenderservice/templates/pdb.yaml
@@ -1,9 +1,9 @@
 apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
-  name: {{ .Chart.Name }}-pdb
+  name: {{ include "vegarenderservice.fullname" . }}-pdb
 spec:
   maxUnavailable: 0
   selector:
     matchLabels:
-      app: {{ .Chart.Name }}
+      app: {{ include "vegarenderservice.fullname" . }}
