GUILD-136 Migrate QA environment to ESA Tenant * mutateUnlabelled for the admission controller, which should help tag things appropriately

--- a/charts/zybach/charts/zybach-geoserver/templates/deployment.yaml
+++ b/charts/zybach/charts/zybach-geoserver/templates/deployment.yaml
@@ -3,6 +3,9 @@ kind: Deployment
 metadata:
   name: {{ include "geoserver.fullname" . }}
   labels:
+    tags.datadoghq.com/env: {{ .Values.global.env.name | quote }}
+    tags.datadoghq.com/service: {{ include "geoserver.fullname" . }}
+    tags.datadoghq.com/team: {{ .Values.namespace | quote }}
     {{- include "geoserver.labels" . | nindent 4 }}
 spec:
   revisionHistoryLimit: 1 # Default to 10 if not specified
