--- a/charts/zybach/charts/zybach-api/templates/deployment.yaml
+++ b/charts/zybach/charts/zybach-api/templates/deployment.yaml
@@ -3,6 +3,9 @@ kind: Deployment
 metadata:
   name: {{ include "api.fullname" . }}
   labels:
+    tags.datadoghq.com/env: {{ .Values.global.env.name | quote }}
+    tags.datadoghq.com/service: {{ include "api.fullname" . }}
+    tags.datadoghq.com/team: {{ .Values.namespace | quote }}
     {{- include "api.labels" . | nindent 4 }}
 spec:
   revisionHistoryLimit: 1 # Default to 10 if not specified
