GUILD-136 Migrate QA environment to ESA Tenant * adjust minimum level slightly

--- a/Zybach.Swagger/appsettings.json
+++ b/Zybach.Swagger/appsettings.json
@@ -27,7 +27,7 @@
         "Microsoft.AspNetCore.Routing": "Warning",
         "Microsoft.AspNetCore.Cors.Infrastructure.CorsService": "Warning",
         "Microsoft.AspNetCore.Authentication.JwtBearer.JwtBearerHandler": "Warning",
-        "Microsoft.EntityFrameworkCore.Database.Command.CommandExecuted": "Warning" // comment line or remove if you want to view executed db commands
+        "Microsoft.EntityFrameworkCore.Database.Command": "Warning" // comment line or remove if you want to view executed db commands
       }
     }
   }
