--- a/charts/zybach/charts/zybach-geoserver/templates/deployment.yaml
+++ b/charts/zybach/charts/zybach-geoserver/templates/deployment.yaml
@@ -5,7 +5,6 @@ metadata:
   labels:
     tags.datadoghq.com/env: {{ .Values.global.env.name | quote }}
     tags.datadoghq.com/service: {{ include "geoserver.fullname" . }}
-    tags.datadoghq.com/teamName: {{ .Values.namespace | quote }}
     tags.datadoghq.com/version: {{ .Values.image.tag | default .Chart.AppVersion | quote }}
     {{- include "geoserver.labels" . | nindent 4 }}
 spec:
@@ -19,6 +18,7 @@ spec:
   template:
     metadata:
       annotations:
+        ad.datadoghq.com/tags: '{"teamName": "{{ .Values.namespace }}"}'
         rollme: {{ randAlphaNum 5 | quote }} # roll deployments on every upgrade: https://helm.sh/docs/howto/charts_tips_and_tricks/#automatically-roll-deployments
       {{- with .Values.podAnnotations }}
         {{- toYaml . | nindent 8 }}
