Support downloading date range. Support openening up the files and reading them!

--- a/Zybach.Tests/Zybach.Tests.csproj
+++ b/Zybach.Tests/Zybach.Tests.csproj
@@ -8,6 +8,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="GDAL" Version="3.8.5" />
+    <PackageReference Include="GDAL.Native" Version="3.8.5" />
     <PackageReference Include="Humanizer.Core" Version="2.14.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
