Start refactoring the work done during the spike to make it more production ready. Update the example test to also insert the data into SQL as proof of concept.

--- a/Zybach.API/Zybach.API.csproj
+++ b/Zybach.API/Zybach.API.csproj
@@ -40,6 +40,9 @@
     <ProjectReference Include="..\Zybach.EFModels\Zybach.EFModels.csproj" />
     <ProjectReference Include="..\Zybach.Models\Zybach.Models.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Helpers\" />
+  </ItemGroup>
   <!-- 
     This PostBuild target is used to generate the static swagger.json file that is meant to be 
     used by the web project to generate typescript models using `npm run gen-model`
