--- a/charts/zybach/charts/zybach-api/templates/zybach-api-secrets.yaml
+++ b/charts/zybach/charts/zybach-api/templates/zybach-api-secrets.yaml
@@ -15,5 +15,6 @@ stringData:
       "GEOOPTIX_API_KEY": "{{ .Values.global.secrets.geoOptixApiKey }}",
       "GET_API_SUBSCRIPTION_KEY": "{{ .Values.global.secrets.getApiSubscriptionKey }}",
       "INFLUXDB_TOKEN": "{{ .Values.global.secrets.influxDBToken }}",
-      "OPENET_API_KEY": "{{ .Values.global.secrets.openETApiKey }}"
+      "OPENET_API_KEY": "{{ .Values.global.secrets.openETApiKey }}",
+      "AzureBlobStorageConnectionString": "DefaultEndpointsProtocol=https;AccountName={{ .Values.global.secrets.applicationStorageAccountName }};AccountKey={{ .Values.global.secrets.applicationStorageAccountKey }};EndpointSuffix=core.windows.net"
     }
