PrismAPIService - Swap out local storage for blob storage and get the download test working using blobs and upserting the sync tracking entities.

--- a/Zybach.Tests/environment.json.template
+++ b/Zybach.Tests/environment.json.template
@@ -1,3 +1,4 @@
 {
-  "sqlConnectionString": "#{sqlConnectionString}#"
+  "sqlConnectionString": "#{sqlConnectionString}#",
+  "AzureBlobStorageConnectionString": "#{AzureBlobStorageConnectionString}#"
 }
