Update config maps with PRISM_API_BASE_URL.

--- a/charts/zybach/charts/zybach-api/templates/configmap-prod.yaml
+++ b/charts/zybach/charts/zybach-api/templates/configmap-prod.yaml
@@ -31,4 +31,5 @@ data:
   OpenETRasterMetadataRoute: "raster/metadata"
   OpenETRasterExportStatusRoute: "raster/export/status"
   OpenETRasterTimeseriesMultipolygonColumnToUseAsIdentifier: "tpid"
+  PRISM_API_BASE_URL: "https://services.nacse.org/prism/data/public/4km"
 {{ end }}  
