--- a/docker-compose/.env.template
+++ b/docker-compose/.env.template
@@ -32,3 +32,4 @@ DefaultBoundingBoxBottom=
 OpenETRasterTimeseriesMultipolygonColumnToUseAsIdentifier=
 AllowOpenETSync=
 HOSTNAME=
+PRISM_API_BASE_URL=https://services.nacse.org/prism/data/public/4km
