--- a/Zybach.Tests/Zybach.Tests.csproj
+++ b/Zybach.Tests/Zybach.Tests.csproj
@@ -8,9 +8,9 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="GDAL" Version="3.8.5" />
-    <PackageReference Include="GDAL.Native" Version="3.8.5" />
     <PackageReference Include="Humanizer.Core" Version="2.14.1" />
+    <PackageReference Include="MaxRev.Gdal.Core" Version="3.9.0.218" />
+    <PackageReference Include="MaxRev.Gdal.WindowsRuntime.Minimal" Version="3.9.0.218" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.10" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.10" />
